--- a/pong.kv
+++ b/pong.kv
@@ -28,13 +28,13 @@
         font_size: 70
         center_x: root.width / 4
         top: root.top - 50
-        text: "0"
+        text: str(player_left.score)
 
     Label:
         font_size: 70
         center_x: root.width * 3 / 4
         top: root.top - 50
-        text: "0"
+        text: str(player_right.score)
 
     PongBall:
         id: pong_ball
@@ -42,7 +42,7 @@
 
     PongPaddle:
         id: player_left
-        x: root.x
+        x: root.width - root.width
         center_y: root.center_y
 
     PongPaddle:
